[build-system]
requires = ["setuptools>=68", "wheel", "Cython>=3.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scheduling_simulator"
version = "0.1.0"
description = "Example library with a Cython-compiled core"
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "hypothesis>=6.156.6",
    "numpy>=2.2.6",
    "ruff>=0.15.21",
]

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
build = [
    "cython>=3.2.8",
    "setuptools>=83.0.0",
]
dev = [
    "hypothesis>=6.156.6",
    "pytest>=9.1.1",
]
