[build-system]
requires = ["setuptools>=68", "wheel", "Cython>=3.0", "numpy>=2.2.6", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scheduling_simulator"
version = "0.1.0"
description = "Example library with a Cython-compiled core"
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "hypothesis>=6.156.6",
    "numpy>=2.2.6",
    "ruff>=0.15.21",
    "setuptools>=83.0.0",
]

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools]
package-dir = {"" = "scheduling_simulator"}

[tool.setuptools.packages.find]
where = ["scheduling_simulator"]

[tool.hypothesis]
database = true

[tool.coverage.run]
source = ["src/scheduling_simulator"]
plugins = ["Cython.Coverage"]


[tool.coverage.report]
show_missing = true
fail_under = 80

[dependency-groups]
build = [
    "cython>=3.2.8",
    "setuptools>=83.0.0",
]
dev = [
    "cython>=3.2.8",
    "hypothesis>=6.156.6",
    "numpy>=2.2.6",
    "pytest>=9.1.1",
    "pytest-cov",
    "setuptools>=83.0.0",
    "wheel>=0.47.0",
]
experiments = [
    "gymnasium[box2d]>=1.3.0",
    "stable-baselines3[extra]>=2.3.2",
]
