[build-system]
requires = [
    "setuptools>=68",
    "wheel",
    "Cython>=3.0",
    "numpy>=2.2.6",
]
build-backend = "setuptools.build_meta"


[project]
name = "scheduling_simulator"
version = "0.1.0"
description = "Example library with a Cython-compiled core"
requires-python = ">=3.10"
readme = "README.md"

dependencies = [
    "hypothesis>=6.156.6",
    "numpy==2.2.6",
    "pygame>=2.6.1",
    "ruff>=0.15.21",
    "setuptools>=83.0.0",
]


[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
]


[tool.setuptools]
package-dir = {"" = "src"}


[tool.setuptools.packages.find]
where = ["src"]


[tool.hypothesis]
database = true


[tool.coverage.run]
source = [
    "scheduling_simulator",
]
plugins = [
    "Cython.Coverage",
]


[tool.coverage.report]
show_missing = true
fail_under = 80
exclude_lines = [
    "pragma: no cover"
]
exclude_also = [
    "def __repr__",

]


[tool.pytest.ini_options]
testpaths = [
    "tests",
]


[dependency-groups]
build = [
    "cython>=3.2.8",
    "setuptools>=83.0.0",
    "numpy==2.2.6",
    "wheel>=0.47.0",
]

dev = [
    "cython>=3.2.8",
    "hypothesis>=6.156.6",
    "numpy==2.2.6",
    "pytest>=9.1.1",
    "pytest-cov>=6.0.0",
    "coverage>=7.0",
]

experiments = [
    "gymnasium[box2d]>=1.3.0",
    "stable-baselines3[extra]>=2.3.2",
]
